# testRepo

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  buildAndRunTests.sh  buildProject.sh  build_project.sh  checkCmakeFormatting.sh  cleanBuild.sh  formarProject.sh  formatProject.sh  reformatCmake.sh  run_project.sh  tidy.sh
.github/workflows/: documentation.yaml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: cpp_warnings.cmake  tools.cmake
documentation/: CMakeLists.txt  Doxyfile  conf.py
include/hobby/: enumerateFonts.hpp  fonts.hpp  hobby.h  hobbyDice.h  hobbyMath.h  hobbyMath.hpp
source/: enumerateFonts.cpp  fonts.cpp  hobby.cpp  hobbyMath.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: hobby.cpp
